style/projects.css
body {
    background-color: black;
    color: white;
    font-family:'Times New Roman', Times, serif;
}

/********** Main div wrapper **********/
.main_div {
    position: relative;
    width: 80%;
    margin: auto;
    overflow: hidden;
}

/********** Div containing the project sliders ***********/
.project_slider {
    display: flex;
    transition: transform 0.4s ease-in-out;
}

.slide {
    min-width: 100%;
    display: none;
    box-sizing: border-box;
    padding: 20px;
    text-align: center;
    background-color: black;
    border: 2px solid white;
    box-shadow: 0px 0px 15px 1px lightgray;
    animation: fadeInText 5s ease forwards; 
    transition: box-shadow 0.3s, transform 0.3s;
    border-radius: 10px;
}

.slide.activate {
    display: block;
}
  
/* For project slider buttons */
.prev_btn_project, .next_btn_project {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    background-color: rgba(0, 0, 0, 0.5);
    color: #fff;
    border: none;
    padding: 10px;
    cursor: pointer;
    border-radius: 50%;
}
.prev_btn_project {
    left: 10px;
}
.next_btn_project {
    right: 10px;
}

/* For image slider buttons */
.prev_btn_image, .next_btn_image {
    position: relative;
    top: 50%;
    transform: translateY(-50%);
    background-color: rgba(0, 0, 0, 0.5);
    color: #fff;
    border: none;
    padding: 20px;
    cursor: pointer;
    border-radius: 50%;
    left: 10px;
    right: 10px;
    margin-top: 20px;
}


/********** project images **********/
.image_slider {
    position: relative;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.project_img, .project_video {
    width: 20%;
    height: auto;
    max-width: 100%;
    margin: 10px 0;
    object-fit: contain;
    display: none;
}

.project_img.active, .project_video.active {
    display: block;
}



  

